# libdino

./: .gitignore  Makefile  meson.build  meson_options.txt
lib/: array.c  array.h  bsearchn.c  bsearchn.h  buf.c  buf.h  common.h  compressfuncs.c  compression.c  compression.h  config.h  d_zstd.h  digest.c  digest.h  dino.h  dino_begin.c  fileio.c  fileio.h  index.c  libdino-config.h.in  libdino.h  libdino_internal.h  memory.c  memory.h  meson.build  namtab.c  sectab.c  section.c  system.h  varint.c  varint.h  zstd.c
lib/compression/: algo.inc  compression.c  compression.h  funcs.c  xz.c  xz.h  zstd.c  zstd.h
src/: dinoinfo.c  dinorpm.c  dinotools.c  dinotools.h  meson.build  mkdino.c
subprojects/: munit.wrap
tests/: meson.build  munit.h  test_array.c  test_bsearch.c  test_bsearch.h  test_compress.c  test_digest.c  test_misc.c  test_munit.c
