# compression options
option('zstd', type:'feature', value:'enabled')
#option('xz',   type:'feature', value:'enabled')
option('xz',   type:'feature', value:'disabled')
option('zlib', type:'feature', value:'disabled')

# TODO: this should probably be a separate project
option('rpm',  type:'feature', value:'enabled')
